<resources>
    <string name="app_name">Noteflex</string>
    <string name="title">Title</string>
    <string name="notes">Note</string>
    <string name="edited_12_15_pm">Edited 12:15 PM</string>
    <string name="search_your_notes">Search your notes</string>
    <string name="new_list">New list</string>
    <string name="new_drawing_note">New drawing note</string>
    <string name="new_audio_note">New audio note</string>
    <string name="new_photo_note">New photo note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pin">Pin</string>
    <string name="add_reminder">Add reminder</string>
    <string name="change_color">Change color</string>
    <string name="add_label">Add label</string>
    <string name="cross_button">Cross Button</string>
</resources>