<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/pin_top_menu"
        android:icon="@drawable/ic_push_pin"
        app:showAsAction="always"
        android:title="@string/pin"/>

    <item android:id="@+id/bell_top_menu"
        android:icon="@drawable/ic_notifications"
        app:showAsAction="always"
        android:title="@string/add_reminder"/>

    <item android:id="@+id/color_top_menu"
        android:icon="@drawable/ic_color_lens"
        app:showAsAction="always"
        android:title="@string/change_color"/>

    <item android:id="@+id/label_top_menu"
        android:icon="@drawable/ic_label"
        app:showAsAction="always"
        android:title="@string/add_label"/>

    <item android:id="@+id/archive_top_menu"
        android:title="Archive"/>

    <item android:id="@+id/delete_top_menu"
        android:title="Delete"/>

    <item android:id="@+id/copy_top_menu"
        android:title="Make a copy"/>

    <item android:id="@+id/send_top_menu"
        android:title="Send"/>

    <item android:id="@+id/copyToDocs_top_menu"
        android:title="Copy to Google Docs"/>

</menu>